Closed Bug 67563 Opened 24 years ago Closed 24 years ago

Crash on certain properties of OPTION, TH or TD

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
major

Tracking

()

VERIFIED FIXED
mozilla0.8

People

(Reporter: bc, Assigned: jst)

Details

(Keywords: crash, testcase, Whiteboard: [HAVE FIX])

Attachments

(3 files)

1. Create an OPTION, TH, or TD Element. elm = document.createElement('OPTION'); 2. access property via typeof typeof(elm['form']) 3. crash. Occurs at least for 'form' in Option, 'cellIndex' in TD and TH. Note these properties are the first properties gotten from a "for (p in elm)" iteration. Does not occur for 'text' in Option, 'bgColor' in TD and TH. These are the only Elements that cause this crash. Mozilla Trunk Build/2001-02-01-04/Win2k
Adding testcase keyword
Keywords: testcase
These crashes were due to a bunch of missing null ptr checks, I'll attach a fix.
Status: NEW → ASSIGNED
Keywords: crash
OS: Windows 2000 → All
Hardware: PC → All
Whiteboard: [HAVE FIX]
Target Milestone: --- → mozilla0.8
Attached patch Proposed fix.Splinter Review
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Component: DOM Level 1 → DOM HTML
QA contact Update
QA Contact: janc → desale
Verified with 2001-05-22-04.
Status: RESOLVED → VERIFIED
Component: DOM: HTML → DOM: Core & HTML
QA Contact: desale → general
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: