Fixing bug 67563. Adding null pointer checks to avoid crasing when accessing certain properties on orphan OPTION, TD and TH elements. r=harishd@netscape.com, r=nisheeth@netscape.com, sr=vidur@netscape.com